--- a/BT/BT/BT.vcxproj
+++ b/BT/BT/BT.vcxproj
@@ -136,9 +136,11 @@
     <ClCompile Include="Libraries\Src\glad.c" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Source.cpp" />
+    <ClCompile Include="stb_image.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Shader.h" />
+    <ClInclude Include="stb_image.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\Shaders\shader.fs" />
