--- a/BT_implementation/BTSB/BTSB/BTSB.vcxproj
+++ b/BT_implementation/BTSB/BTSB/BTSB.vcxproj
@@ -145,6 +145,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Box.h" />
+    <ClInclude Include="Mesh.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="Shader.h" />
