--- a/BT_implementation/BTSB/BTSB/BTSB.vcxproj.filters
+++ b/BT_implementation/BTSB/BTSB/BTSB.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClInclude Include="Box.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Mesh.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
