Added Mesh, Model and assimp loading to BT implementation

--- a/BT_implementation/BTSB/BTSB/BTSB.vcxproj
+++ b/BT_implementation/BTSB/BTSB/BTSB.vcxproj
@@ -139,6 +139,8 @@
   <ItemGroup>
     <ClCompile Include="Box.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Mesh.cpp" />
+    <ClCompile Include="Model.cpp" />
     <ClCompile Include="Object.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="Shader.cpp" />
@@ -146,6 +148,7 @@
   <ItemGroup>
     <ClInclude Include="Box.h" />
     <ClInclude Include="Mesh.h" />
+    <ClInclude Include="Model.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="Shader.h" />
